# cc-switch-otools

./: .gitignore  README.md  README_JA.md  README_ZH.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
native/: Cargo.toml
otools/: plugin.json
otools/native/: Cargo.toml
otools/native/src/: lib.rs
scripts/: build-native.mjs
src/: main.tsx  vite-env.d.ts
src-tauri/src/: lib.rs
src/lib/: desktop-runtime.ts  updater.ts
src/lib/api/: settings.ts  skills.ts  vscode.ts
