[package]
name = "cc-switch-native"
version = "3.12.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cc_switch_lib = { package = "cc-switch", path = "../../src-tauri" }
once_cell = "1.21.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
